<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".HomeScreenActivity">

  <ImageView
    android:id="@+id/logo"
    android:layout_width="220dp"
    android:layout_height="220dp"
    android:contentDescription="@string/logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.199"
    app:srcCompat="@drawable/ic_logo" />

  <TextView
    android:id="@+id/boas_vindas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/inter_medium"
    android:text="@string/boas_vindas"
    android:textColor="@color/black"
    android:textSize="19sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.472" />

  <TextView
    android:id="@+id/introducao"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/inter_medium"
    android:text="@string/introducao"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.494"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/boas_vindas"
    app:layout_constraintVertical_bias="0.058" />

  <Button
    android:id="@+id/comecar"
    android:layout_width="320dp"
    android:layout_height="60dp"
    android:backgroundTint="@color/black"
    android:text="@string/botao_comecar"
    android:textColor="@color/white"
    android:textAllCaps="false"
    android:textSize="16sp"
    android:textStyle="bold"
    android:fontFamily="@font/inter_medium"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.76" />

  <Button
    android:id="@+id/estoque"
    android:layout_width="320dp"
    android:layout_height="60dp"
    android:backgroundTint="@color/black"
    android:text="@string/botao_estoque"
    android:textColor="@color/white"
    android:textAllCaps="false"
    android:fontFamily="@font/inter_medium"
    android:textStyle="bold"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.844" />


</androidx.constraintlayout.widget.ConstraintLayout>