<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SplashScreenActivity">

  <ImageView
    android:id="@+id/logo_splash"
    android:layout_width="240dp"
    android:layout_height="240dp"
    android:contentDescription="@string/app_name"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.459"
    app:srcCompat="@drawable/ic_logo" />

  <TextView
    android:id="@+id/nome_curso"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="226dp"
    android:fontFamily="@font/inter"
    android:text="@string/nome_curso"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.085" />

  <TextView
    android:id="@+id/nome_universidade"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/inter"
    android:text="@string/nome_universidade"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.914" />

</androidx.constraintlayout.widget.ConstraintLayout>