<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SeparationScreenActivity">

  <TextView
    android:id="@+id/apresentacao_scanner"
    android:layout_width="275dp"
    android:layout_height="wrap_content"
    android:fontFamily="@font/inter_medium"
    android:text="@string/introducao_separacao"
    android:textAlignment="center"
    android:textSize="17sp"
    android:textColor="@color/black"
    app:layout_constraintBottom_toTopOf="@+id/scanner"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <SurfaceView
    android:id="@+id/scanner"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginBottom="220dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/scanner_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.455"
    app:srcCompat="@drawable/ic_scan"
    android:contentDescription="@string/scanner" />

  <TextView
    android:id="@+id/status_scanner"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="152dp"
    android:fontFamily="@font/inter_medium"
    android:textAlignment="center"
    android:textColor="#000000"
    android:textSize="17sp"
    android:textStyle="bold"
    android:text="@string/escaneie"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/buscar_produtos"
    android:layout_width="320dp"
    android:layout_height="60dp"
    android:layout_marginBottom="52dp"
    android:backgroundTint="@color/black"
    android:fontFamily="@font/inter_medium"
    android:text="@string/buscar_produtos"
    android:visibility="invisible"
    android:textAllCaps="false"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>